<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".AddEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container_background"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/editTextEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text_background"
                android:hint="@string/add_name"
                android:inputType="textMultiLine|textCapWords"
                android:padding="20dp" />

            <EditText
                android:id="@+id/editTextEventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text_background"
                android:hint="@string/add_description"
                android:inputType="textMultiLine|textCapWords"
                android:padding="20dp" />

            <EditText
                android:id="@+id/editTextEventLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text_background"
                android:hint="@string/add_location"
                android:inputType="textMultiLine|textCapWords"
                android:padding="20dp" />

            <EditText
                android:id="@+id/editTextEventSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text_background"
                android:hint="@string/add_size"
                android:inputType="number"
                android:padding="20dp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:background="@drawable/background_container_white"
            android:padding="15dp"
            android:text="@string/add_event"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>