<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".ResetPasswordActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/container_background"
            android:padding="4dp"
            android:text="@string/title_new_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/text_background"
            android:hint="@string/hint_email_field"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/container_background"
            android:padding="15dp"
            android:text="@string/get_new_password"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>