<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".EventDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/container_background"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:text="Название мероприятия" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/container_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/event_location"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewEventLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/text_background"
                android:padding="20dp"
                android:textSize="20sp"
                tools:text="Красная улица 186 " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/container_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewEventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/text_background"
                android:padding="20dp"
                android:textSize="20sp"
                tools:text="Большое количество букв описания
Большое количество букв описания
Большое количество букв описания
Большое количество букв описания
Большое количество букв описания
Большое количество букв описания
Большое количество букв описания
Большое количество букв описания
" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/container_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/remaining_seats"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewEventRemainingSeats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/text_background"
                android:padding="14dp"
                android:textSize="20sp"
                tools:text="14" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSubscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_container_white"
            android:padding="15dp"
            android:text="@string/subscribe"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>